--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,28 +1,26 @@
 header {
-  background-color: rgba(154, 216, 129, 0.904);
+  background: linear-gradient(
+    to bottom right,
+    rgb(231 255 202),
+    rgb(239 126 184)
+  );
   box-shadow: 0 12px 34px -11px rgb(38 20 19 / 10%);
-  border-bottom: 2px solid rgba(0, 0, 0, 0.4);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(2px);
   font-weight: 500;
-  font-size: 1.2rem;
-  
+  font-size: 1.3rem;
 }
 
-/* .header__nav {
-  width: inherit;
-  display: grid;
-  grid-template-columns: 20% auto 10% 10%;
-  align-items: center;
-  font-size: 1.4rem;
-} */
-
-.header__nav a {
-  width: fit-content;
-  height: fit-content;
-  padding: 0;
-  
+.header__nav {
+  color: rgb(28, 34, 46)!important;
 }
 
 .header__nav i {
   font-size: 1.6rem;
 }
+/* 
+.navbar__badge {
+  left: 90%;
+  top: 10%;
+  font-size: 0.65em;
+} */
