--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@ body {
   font-family: 'Comfortaa', cursive;
 }
 
+.strike-through {
+  text-decoration: underline;
+  text-underline-offset: -0.3em;
+  text-decoration-skip-ink: none;
+}
+
 
 /* MAIN HEADER */
 .main__header {
@@ -93,19 +99,24 @@ body {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 8rem;
+  max-width: 7.5rem;
 }
 
 .product__card-picture {
-  min-height: 256px;
+  height: 224px;
+  width: 224px;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
+  align-self: center;
 }
 
 .product__card-picture img {
-  max-height: 256px;
-  max-width: fit-content;
+  /* max-height: 224px; */
+  width: 100%;
+  height: 100%;
+  /* max-width: fit-content; */
+  object-fit: contain;
 }
 
 
