--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ body {
   text-decoration-skip-ink: none;
 }
 
+.discount {
+  color: #f74f60;
+}
+
 
 /* MAIN HEADER */
 .main__header {
@@ -102,21 +106,31 @@ body {
   max-width: 7.5rem;
 }
 
-.product__card-picture {
+.product__card-img {
   height: 224px;
   width: 224px;
   display: flex;
-  /* align-items: center; */
   justify-content: center;
   align-self: center;
 }
 
-.product__card-picture img {
-  /* max-height: 224px; */
+.product__card-img img {
   width: 100%;
   height: 100%;
-  /* max-width: fit-content; */
   object-fit: contain;
+}
+
+
+/* CHECKOUT */
+.checkout__product_card-img {
+  height: 96px;
+  width: 96px;
+}
+
+.checkout__product_card-img img {
+  height: initial;
+  max-height: 100%;
+  align-self: start;
 }
 
 
