updates: header link sizes for better ux; error page; error placeholder block; jsx code; debounce init value

--- a/src/components/Loaders/Loader.module.css
+++ b/src/components/Loaders/Loader.module.css
@@ -17,6 +17,8 @@
   position: relative;
 }
 
+
+/* LOADER ANIMATION */
 .lds-ellipsis {
   display: inline-block;
   position: relative;
@@ -29,7 +31,7 @@
   width: 13px;
   height: 13px;
   border-radius: 50%;
-  background: rgb(28, 34, 46);
+  background: var(--main-text-color);
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .lds-ellipsis div:nth-child(1) {
