--- a/src/components/Pages/Login/Login.module.css
+++ b/src/components/Pages/Login/Login.module.css
@@ -22,7 +22,7 @@
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #2d3850;
   --bs-btn-hover-border-color: #2d3850;
-  --bs-btn-focus-shadow-rgb: 108,117,125;
+  --bs-btn-focus-shadow-rgb: 108, 117, 125;
   --bs-btn-active-color: #fff;
   --bs-btn-active-bg: #2d3850;
   --bs-btn-active-border-color: #2d3850;
