--- a/src/components/Loaders/Loader.module.css
+++ b/src/components/Loaders/Loader.module.css
@@ -1,13 +1,13 @@
 .modal__loader_container {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 9999;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center; */
+  /* align-items: center; */
   background-color: rgba(0, 0, 0, .2);
   backdrop-filter: blur(3px);
 }
@@ -31,7 +31,7 @@
   width: 13px;
   height: 13px;
   border-radius: 50%;
-  background: var(--main-text-color);
+  background: var(--main-color);
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .lds-ellipsis div:nth-child(1) {
