reworked delete item modal component: now handles single/multiple items removal and clearing; fixed position of header counter icon; remove unecessary console logs; fixed 'controlled to uncontrolled input' error in checkout, wishlist pages

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -38,8 +38,10 @@
   border-bottom: 0.2rem solid var(--main-color);
 }
 
-.cart__couter-icon {
+.header__couter-icon {
   background-color: var(--btn-main-color);
+  top: 7%;
+  left: 93%;
 }
 
 .navbar__brand-text {
