added new/edit user product form modals:   validation configured,   add/edit/delete buttons with corresponding actions,   placeholders for deleted user product on checkout/wishlist pages,   redidect from deleted product detail page,   updated checkout/wishlist handling bars to work with deleted user product,   updated modal container - now can be configured for different modal types,   updated functions for to support new features,   reorganized app structure 2b more suitable with new features,   other small fixes

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -44,12 +44,20 @@
   font-size: 1.4rem;
 }
 
-.header__user-avatar {
+.header__user-avatar,
+.header__new-product {
   border: 3px solid var(--main-color);
   box-shadow: 0 0px 6px .5px rgba(28, 34, 46, .3);
   width: 3rem;
   height: 3rem;
   object-fit: cover;
+}
+
+.header__new-product button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
 }
 
 .navbar-toggler{
