--- a/src/components/Modals/ModalContainer.css
+++ b/src/components/Modals/ModalContainer.css
@@ -8,12 +8,13 @@
   display: flex;
   background-color: rgba(0, 0, 0, .4);
   backdrop-filter: blur(3px);
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
-.modal__content{ 
+.modal__content { 
   margin: auto;
-  min-width: 320px;
-  max-width: 480px;
+  width: auto;
   background: linear-gradient(
     to bottom right,
     hsl(89, 17%, 92%),
