changed header to fixed, added header animation on scroll, updated header nav links styles, added new products filter sort - by newest date, fixed user info validation wrong username max value

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,13 +4,28 @@
     rgb(231 255 202),
     rgb(239 126 184)
   );
+  background-size: 120% 120%;
+  background-position: calc(120% - 20%) 20%;
   box-shadow: 0 12px 34px -11px rgb(38 20 19 / 10%);
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(2px);
+  backdrop-filter: none;
   font-weight: 500;
   font-size: 1.3rem;
   z-index: 99;
+  transition: all .3s cubic-bezier(.645, .045, .355, 1);
 }
+
+.main__header.animated {
+  background: linear-gradient(
+    to bottom right,
+    rgb(231 255 202 / 90%),
+    rgb(239 126 184 / 90%)
+  );
+  background-size: 120% 120%;
+  backdrop-filter: blur(3px);
+  background-position: 0 0;
+}
+
 
 .header__nav__links a.nav-link,
 .header__nav__links button.nav-link,
@@ -28,9 +43,18 @@
   color: var(--main-color);
 }
 
+.header__nav__links a.nav-link:hover {
+  background-color: rgba(255, 255, 255, .3);
+  border-radius: 0.5rem 0.5rem 0 0;
+  margin-bottom: -0.2rem;
+  border-bottom: 0.2rem solid rgba(28, 34, 46, .5);
+}
+
 .header__nav__links a.nav-link.active {
   margin-bottom: -0.2rem;
   border-bottom: 0.2rem solid var(--main-color);
+  background-color: rgba(255, 255, 255, .4);
+  border-radius: 0.5rem 0.5rem 0 0;
 }
 
 .header__badge {
