--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+section {
+  padding-top: 6.5rem;;
+}
+
 .text-main {
   color: var(--main-color);
 }
