--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --main-color: rgb(28, 34, 46);
+  --main-color-rgb: 28, 34, 46;
   --btn-main-color: #d92c3e;
   --btn-main-color-darker: hsl(354, 69%, 46%);
   --btn-main-color-darkest: hsl(354, 69%, 42%);
@@ -28,11 +29,11 @@ section {
 }
 
 .nav-link:not(.dropdown-item) {
-  color: rgba(28, 34, 46, .7);
+  color: rgba(var(--main-color-rgb), .7);
 }
 
 .nav-link:hover:not(.dropdown-item) {
-  color: rgba(28, 34, 46, .85);
+  color: rgba(var(--main-color-rgb), .85);
 }
 
 .nav-link:active:not(.dropdown-item) {
@@ -68,16 +69,16 @@ section {
 .form-floating.fix-overlap:before {
   content: '';
   position: absolute;
-  top: 2px;
-  left: 1rem;
-  width: calc(100% - 3.5rem); /* to show scrollbar */
-  height: 32px;
-  border-radius: 4px; /* (default by BS) */
+  top: 1px;
+  left: .625rem;
+  width: calc(100% - 3rem); /* to show scrollbar */
+  height: 1.625rem;
+  border-radius: .375rem 0 0; /* (default by BS) */
   background-color: #fff;
 }
 
 .form-floating.fix-overlap textarea.form-control {
-  padding-top: 32px; /* height of pseudo element */
+  padding-top: 1.625rem; /* height of pseudo element */
   padding-right: 32px;
 }
 /* End of form floating textarea label overlapped fix */
@@ -100,13 +101,27 @@ section {
   color: var(--discount-color);
 }
 
-/* PRODUCTS PAGES */
-.product__card .overlayable_content:hover .product__card-overlay {
+
+/* USER DETAIL */
+.user__detail-img {
+  height: 320px;
+  width: 320px;
+}
+
+.user__detail-img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+
+/* OVERLAYS */
+.overlayable_content:hover .overlay-action {
   visibility: visible;
   opacity: 1;
 }
 
-.product__card-overlay {
+.overlay-action {
   visibility: hidden;
   position: absolute;
   width: 100%;
@@ -122,11 +137,21 @@ section {
   transition: all .3s cubic-bezier(.645, .045, .355, 1);
 }
 
-.product__card a {
+.product__card a,
+.checkout__product_card a,
+.wishlist__product_card a {
   text-decoration: none;
   color: var(--main-color);
 }
 
+.checkout__product_card a:hover,
+.wishlist__product_card a:hover {
+  text-decoration: underline;
+  color: var(--btn-sec-color);
+}
+
+
+/* PRODUCTS PAGES */
 .product__card button {
   padding: 0.75rem;
   line-height: normal;
@@ -170,6 +195,7 @@ section {
   object-fit: contain;
 }
 
+
 /* PRODUCT DETAIL */
 .product__detail .product__card-img {
   height: 256px;
@@ -178,20 +204,29 @@ section {
 
 .vendor__logo {
   border: 2px solid var(--main-color);
-  box-shadow: 0 0px 2px .5px rgba(28, 34, 46, .3);
+  box-shadow: 0 0px 2px .5px rgba(var(--main-color-rgb), .3);
   width: 2rem;
   height: 2rem;
   object-fit: cover;
 }
 
+.line-clamp {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 3;
+}
 
-/* CHECKOUT */
-.checkout__product_card-img {
+
+/* CHECKOUT / WISHIST */
+.checkout__product_card-img
+.wishlist__product_card-img {
   height: 96px;
   width: 96px;
 }
 
-.checkout__product_card-img img {
+.checkout__product_card-img img,
+.wishlist__product_card-img img {
   height: initial;
   max-height: 100%;
   align-self: start;
