--- a/src/components/Forms/UserProductForm/UserProductForm.css
+++ b/src/components/Forms/UserProductForm/UserProductForm.css
@@ -16,3 +16,15 @@
   height: 164px;
   object-fit: contain;
 }
+
+.user-product__form .form-check {
+  border: var(--bs-border-width) solid var(--bs-border-color);
+}
+
+.user-product__form .form-check-input {
+  border-color: var(--main-color);
+}
+
+.user-product__form .form-check-input:checked {
+  border-color: transparent;
+}
