--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -36,7 +36,7 @@
 }
 
 .header__nav__user-btns a.nav-link:hover {
-  color: rgba(28, 34, 46, .85);
+  color: rgba(var(--main-color-rgb), .85);
 }
 
 .header__nav__user-btns a.nav-link.active {
@@ -47,7 +47,7 @@
   background-color: rgba(255, 255, 255, .3);
   border-radius: 0.5rem 0.5rem 0 0;
   margin-bottom: -0.2rem;
-  border-bottom: 0.2rem solid rgba(28, 34, 46, .5);
+  border-bottom: 0.2rem solid rgba(var(--main-color-rgb), .5);
 }
 
 .header__nav__links a.nav-link.active {
@@ -71,7 +71,7 @@
 .header__user-avatar,
 .header__new-product {
   border: 3px solid var(--main-color);
-  box-shadow: 0 0px 6px .5px rgba(28, 34, 46, .3);
+  box-shadow: 0 0px 6px .5px rgba(var(--main-color-rgb), .3);
   width: 3rem;
   height: 3rem;
   object-fit: cover;
