added missing submit new review form, when product have no reviews yet; added tooltips to: checkout/wishlist navlinks, add new product button, add to cart button

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -77,11 +77,15 @@
   object-fit: cover;
 }
 
-.header__new-product button {
+.header__new-product {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: none;
+  opacity: .75;
+}
+
+.header__new-product:hover {
+  opacity: 1;
 }
 
 .navbar-toggler{
